# shrowd-secret

./: .gitignore  AI_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NIGHTLY.md  PERFORMANCE_BENCHMARKS.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_STATUS.md  README.md  SECURITY.md  TECHNICAL_ANALYSIS.md
examples/: mnemonic_demo.rs
src/: attic_security.rs  crypto_protocol.rs  crypto_runtime.rs  key_ledger.rs  lib.rs  secret_config.rs  secure_network.rs
tests/: comprehensive_crypto_tests.rs  test_crypto_protocol.rs  test_key_ledger.rs  test_mnemonic.rs  test_secret_config.rs  test_secure_network.rs  validate_no_hardcoded_data.rs
